--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
-echo "# canogerman.github.io" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/canogerman/canogerman.github.io.git
-git push -u origin main
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>
+	Ejercicio1
+	</title>
+	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
+	<link rel="stylesheet" type="text/css" href="styles/estilo.css">
+</head>
+
+<body>
+	<div>
+		<button class="boton" id="boton1">Boton</button">
+	</div>
+	
+	<p class="texto" id="texto1">Este texto deberia cambiar cuando aprete el botón y alguna otra cosa</p>
+
+	<div>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+	</div>
+	<script src="scripts/codigo.js"></script>
+</body>
+</html>
