--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
             </div>
             <footer class="sticky bottom-0 bg-[#111c22]/80 backdrop-blur-sm px-4 py-4 space-y-2">
                 <div class="flex gap-4">
+                    <button id="clear-data-button" class="flex-1 flex w-full min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-14 px-5 bg-red-600 text-white text-lg font-bold leading-normal tracking-[0.015em] hover:bg-red-700 active:bg-red-800 transition-colors shadow-lg shadow-red-900/50">
+                        <span class="material-symbols-outlined mr-2"> delete </span>
+                        <span class="truncate">Limpiar Datos</span>
+                    </button>
                     <button id="save-reading-button" class="flex-1 flex w-full min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-14 px-5 bg-primary-600 text-white text-lg font-bold leading-normal tracking-[0.015em] hover:bg-primary-700 active:bg-primary-800 transition-colors shadow-lg shadow-primary-900/50">
                         <span class="material-symbols-outlined mr-2"> save </span>
                         <span class="truncate">Guardar Lectura</span>
