--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <input type="date" id="new-reading-date" hidden/>
                     </div>
                 </header>
-                <main class="p-4 space-y-6">
+                <main class="p-4 space-y-4">
                     <!-- Instrument Selection -->
                     <div class="flex gap-4">
                         <div class="flex-1">
@@ -87,7 +87,7 @@
                                 <p id="latest-measurement" class="text-white tracking-light text-4xl font-bold leading-tight truncate">--</p>
                             </div>
                         </div>
-                        <div class="h-64 py-4">
+                        <div class="h-48 sm:h-64 py-4">
                             <canvas id="measurements-chart"></canvas>
                         </div>
                         <div id="chart-legend" class="flex justify-between text-[#92b7c9] text-xs font-medium tracking-wider border-t border-[#325567] pt-2">
@@ -96,7 +96,7 @@
                     </div>
 
                     <!-- New Reading Form -->
-                    <div class="space-y-4 pt-4">
+                    <div class="space-y-2 pt-2">
                         <div class="flex gap-4">
                             <div class="flex-1 space-y-2">
                                 <label class="text-sm font-medium text-gray-300" for="instrument-reading">Lectura del Instrumento</label>
