se agrega espacio en el footer

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                 </main>
             </div>
-            <footer class="sticky bottom-0 z-10 border-t border-slate-800 bg-[#111c22]/80 backdrop-blur-sm px-4 py-4">
+            <footer class="sticky bottom-0 z-10 border-t border-slate-800 bg-[#111c22]/80 backdrop-blur-sm px-4 pt-4 pb-16">
                 <div class="flex gap-4">
                     <button id="clear-data-button" class="flex-1 flex w-full min-w-0 cursor-pointer items-center justify-center overflow-hidden rounded-lg h-14 px-5 bg-red-600 text-white text-lg font-bold leading-normal tracking-[0.015em] hover:bg-red-700 active:bg-red-800 transition-colors shadow-lg shadow-red-900/50">
                         <span class="material-symbols-outlined mr-2">delete</span>
