se agregan los piezometros hidraulicos

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                                 <option value="PA">PA</option>
                                 <option value="PC">PC</option>
                                 <option value="PD">PD</option>
+                                <option value="PH">PH</option>
                             </select>
                         </div>
                         <div class="flex-1">
